apply pr feedback: Enhance S3 client, storage, logging, utils
Add Apache5 HTTP client and retries dependencies and configure S3Client with timeouts, retry strategy and Apache5HttpClient (connection pool and timeouts). Stream S3 uploads in S3StorageService using RequestBody.fromInputStream with try-with-resources to avoid loading entire file into memory. Add SLF4J logging to GlobalExceptionHandler and log exceptions. Replace Collections.emptyList() with List.of() and remove unused import in MovieQueryRepositoryImpl. Replace Lombok @UtilityClass in PaginationUtils with a final class, private constructor, and static methods. These changes improve resilience, resource usage and logging for troubleshooting.